--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@ Some of the great design systems available like Material Design, Carbon and Flue
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 
+    <link rel="icon"
+      type="image/png"
+      href="./favicon.png">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
